--- a/JuJinMine/app/src/main/AndroidManifest.xml
+++ b/JuJinMine/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="mine">
-
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,6 +25,43 @@
             android:name=".com.LayoutActivity"
             android:label="@string/title_activity_layout">
         </activity>
-    </application>
 
+        <activity android:name=".com.ItemsActivity"
+            android:label="四大组件">
+        </activity>
+        <activity android:name=".com.ItemsDetail.AcitivityItem"
+            android:label="TrueActivity">
+        </activity>
+
+        <activity android:name=".com.ItemsDetail.ServiceActivity"
+            android:label="ServiceActivity">
+        </activity>
+
+        <service android:name=".com.ItemsDetail.DownloadService"
+            android:exported="true"
+            android:enabled="true">
+        </service>
+
+        <activity android:name=".com.ItemsDetail.ContentProviderItem"
+            android:label="ContentProvider">
+
+        </activity>
+        <activity android:name=".com.ItemsDetail.ContentProviderCustomActivity"
+            android:label="创建ContentProvider">
+
+        </activity>
+        
+        <provider
+            android:authorities="com.jujin.mine"
+            android:name=".com.ItemsDetail.ContentProviderCustom"
+            android:enabled="true"
+            android:exported="true">
+
+        </provider>
+
+        <activity android:name=".com.ItemsDetail.BroadcastActivity"
+            android:label="大喇叭广播">
+
+        </activity>
+    </application>
 </manifest>
