--- a/JuJinMine/app/build.gradle
+++ b/JuJinMine/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "com.jujin.mine"
+        applicationId "com.jujin.mine1"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
