--- a/JuJinMine/app/src/main/AndroidManifest.xml
+++ b/JuJinMine/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="mine">
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -69,5 +70,16 @@
             android:label="大喇叭广播">
 
         </activity>
+
+        <activity android:name=".com.SaveItems.SaveItemsActivity"
+                  android:label="四大存储">
+
+        </activity>
+        <activity android:name=".com.SaveItems.SharedPreferenceActivity"
+            android:label="SharedPreference"/>
+        <activity android:name=".com.SaveItems.SaveToFileActivity"
+                  android:label="文件存储"/>
+        <activity android:name=".com.SaveItems.SaveNetActivity"
+                  android:label="网络存储"/>
     </application>
 </manifest>
